Added error handling for API requests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div *ngIf="isLoading">LOADING...</div>
+  <div *ngIf="isLoading">{{ statusRequest }}</div>
   <swiper-container
     *ngIf="!isLoading"
     effect="coverflow"
