Added type definitions for objects in carousel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
     coverflow-effect-slide-shadows="true"
   >
     <swiper-slide *ngFor="let photo of photosArray">
-      <img [src]="photo" />
+      <img [src]="photo.url" />
     </swiper-slide>
   </swiper-container>
 </div>
