--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,21 +6,26 @@
   justify-content: center;
 }
 
+.text-overlay {
+  background-color: rgba(59, 59, 59, 0.5); 
+  font-size: 1.8rem; 
+  color: white;
+  padding: 15px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); 
+}
+
 swiper-container {
   width: 100%;
 }
 
 swiper-slide {
-  width: 1000px;
-  height: auto;
-}
-
-swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
+  width: 1100px;
+  height: 700px;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: end;
 }
 
 @media (max-width: 1124px) {
